--- a/Car.vcxproj
+++ b/Car.vcxproj
@@ -72,23 +72,23 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>C:\irrlicht-1.8.5\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\irrlicht-1.8.5\lib\Win32-visualstudio;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\SDL2_mixer-2.8.0\include;C:\SDL2-2.26.3\include;C:\irrlicht-1.8.5\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\SDL2_mixer-2.8.0\lib\x86;C:\SDL2-2.26.3\lib\x86;C:\irrlicht-1.8.5\lib\Win32-visualstudio;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>C:\irrlicht-1.8.5\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\irrlicht-1.8.5\lib\Win32-visualstudio;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\SDL2_mixer-2.8.0\include;C:\SDL2-2.26.3\include;C:\irrlicht-1.8.5\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\SDL2_mixer-2.8.0\lib\x86;C:\SDL2-2.26.3\lib\x86;C:\irrlicht-1.8.5\lib\Win32-visualstudio;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>C:\irrlicht-1.8.5\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\irrlicht-1.8.5\lib\Win32-visualstudio;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\SDL2_mixer-2.8.0\include;C:\SDL2-2.26.3\include;C:\irrlicht-1.8.5\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\SDL2_mixer-2.8.0\lib\x86;C:\SDL2-2.26.3\lib\x86;C:\irrlicht-1.8.5\lib\Win32-visualstudio;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>C:\irrlicht-1.8.5\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\irrlicht-1.8.5\lib\Win32-visualstudio;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\SDL2_mixer-2.8.0\include;C:\SDL2-2.26.3\include;C:\irrlicht-1.8.5\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\SDL2_mixer-2.8.0\lib\x86;C:\SDL2-2.26.3\lib\x86;C:\irrlicht-1.8.5\lib\Win32-visualstudio;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -103,7 +103,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>Irrlicht.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>Irrlicht.lib;SDL2.lib;SDL2_mixer.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -119,7 +119,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>Irrlicht.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>Irrlicht.lib;SDL2.lib;SDL2_mixer.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -139,7 +139,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>Irrlicht.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>Irrlicht.lib;SDL2.lib;SDL2_mixer.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -159,16 +159,24 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>Irrlicht.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>Irrlicht.lib;SDL2.lib;SDL2_mixer.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Car.cpp" />
+    <ClCompile Include="Engine.cpp" />
+    <ClCompile Include="Simulation.cpp" />
+    <ClCompile Include="Sounds.cpp" />
     <ClCompile Include="Values.cpp" />
+    <ClCompile Include="Vehicles.cpp" />
     <ClCompile Include="World.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Engine.h" />
+    <ClInclude Include="Simulation.h" />
+    <ClInclude Include="Sounds.h" />
     <ClInclude Include="Values.h" />
+    <ClInclude Include="Vehicles.h" />
     <ClInclude Include="World.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
