--- a/Car.vcxproj
+++ b/Car.vcxproj
@@ -165,6 +165,8 @@
   <ItemGroup>
     <ClCompile Include="Car.cpp" />
     <ClCompile Include="Engine.cpp" />
+    <ClCompile Include="Functions.cpp" />
+    <ClCompile Include="InputEventReceiver.cpp" />
     <ClCompile Include="Simulation.cpp" />
     <ClCompile Include="Sounds.cpp" />
     <ClCompile Include="Values.cpp" />
@@ -173,6 +175,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine.h" />
+    <ClInclude Include="Functions.h" />
+    <ClInclude Include="InputEventReceiver.h" />
     <ClInclude Include="Simulation.h" />
     <ClInclude Include="Sounds.h" />
     <ClInclude Include="Values.h" />
